--- a/src/main/resources/static/css/fmstyle.css
+++ b/src/main/resources/static/css/fmstyle.css
@@ -193,8 +193,12 @@
 
 /********************************* BS4 alert-danger like on out-of-stock cart elements */
 .out-of-stock {
+    /*BS4 alert-danger
     background-color: #f8d7da;
-    border-color: #f5c6cb;
+    border-color: #f5c6cb;*/
+    /*BS4 alert-warning*/
+    background-color: #fff3cd;
+    border-color: #ffeeba;
 }
 /********************************/
 
