--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -9,14 +9,29 @@
             <div th:replace="fragments/components::header"></div>
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
-            <!-- out-of-stock alert box -->
-            <div class="row mt-3 mb-n4" th:if="${itemsOutOfStock ne null}">
+            <!-- items pruned alert box -->
+            <div class="row mt-3 mb-n4" th:if="${itemsDisabled ne null}" th:each="item : ${itemsDisabled}">
                 <!-- left margin -->
                 <div class="col-sm-1"></div>
                 <!-- alert box -->
                 <div class="col-sm-10 px-0">
-                    <div class="alert alert-danger mr-4">
-                        <small>En estos momentos no disponemos -en la cantidad pedida- de los libros resaltados. Por favor, para continuar con la compra disminuya su cantidad</small>
+                    <div class="alert alert-danger alert-dismissible fade show mr-4">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <small>Book removed from cart due to unavailability: <strong th:text="${item.book.title}"></strong></small>
+                    </div>
+                </div>
+                <!-- right margin -->
+                <div class="col-sm-1"></div>
+            </div>
+            <!-- out-of-stock alert box -->
+            <div class="row mt-3 mb-n4" th:if="${itemsOutOfStock ne null && !itemsOutOfStock.isEmpty()}">
+                <!-- left margin -->
+                <div class="col-sm-1"></div>
+                <!-- alert box -->
+                <div class="col-sm-10 px-0">
+                    <div class="alert alert-warning mr-4">
+                        <!--<small>En estos momentos no disponemos -en la cantidad pedida- de los libros resaltados. Por favor, para continuar con la compra disminuya su cantidad</small>-->
+                        <small>At the moment we do not have, <strong>in the quantity ordered</strong>, the highlighted books. Please, to continue with the purchase, <strong>decrease the quantity and try again</strong>.</small>
                     </div>
                 </div>
                 <!-- right margin -->
