--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -135,6 +135,6 @@
         <!-- pagination -->
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
-        <script th:src="@{/js/paginationLegend.js}"></script>
+        <script th:src="@{/js/paginationControl.js}"></script>
     </body>
 </html>
