--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -114,7 +114,7 @@
         <!-- pagination functionality -->
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
-        <script th:src="@{/js/paginationLegend.js}"></script>
+        <script th:src="@{/js/paginationControl.js}"></script>
         <!-- modal functionality -->
         <i th:replace="fragments/components::host-address"></i>
         <i th:replace="fragments/components::modal-action(action = 'deleteImage')"></i>
