--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -230,7 +230,7 @@
 
         <!-- pagination legend -->
         <p class="my-0" th:fragment="paginationLegend">
-            <small>
+            <small class="font-weight-lighter">
                 from <span class="paginationBegin">1</span> to <span class="paginationEnd">30</span> of <span class="paginationTotal">5000</span>
             </small>
         </p>
