--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
                             <div class="col-sm-4"></div>
                             <!-- query -->
                             <div class="col-sm-4">
-                                <form class="needs-validation" novalidate th:action="@{/books}" method="GET" action="#">
+                                <form class="needs-validation" novalidate th:action="@{/books}" method="GET">
                                     <div class="input-group mt-5">
                                         <input class="form-control form-control-sm" type="text" name="q" placeholder="title, ISBN, author, publisher..." required />
                                         <div class="input-group-append">
